--- a/index.html
+++ b/index.html
@@ -7,18 +7,22 @@
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/8fca452144.js" crossorigin="anonymous"></script>
-    <title>Theres</title>
+    <title>Therés</title>
 </head>
 <body>
     <header>
         <div class="row">
             <a href="index.html" class="col-md-4 logo">
 
-            </div>
+            </a>
             <div class="col-md-8">
-
+                <div class="row bg-color-name-title">
+                    <div class="col heading">
+                        <h1 class="name">Therés Lundqvist</h1>
+                        <h2 class="title">Junior Full Stack Developer</h2>
+                    </div>
+                </div>
             </div>
-        </div>
     </header>
     <section>
 
