Style footer content

--- a/index.html
+++ b/index.html
@@ -50,15 +50,41 @@
 
     </section>
     <footer class="container-fluid">
-        <div class="row">
+        <div id="footer-details" class="row">
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
+                <p class="inline-block">
+                    Junior Full Stack Developer. Diploma in HTML, CSS, Javascript and Python.
+                </p>
             </div>
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Download</h5>
+                <p class="inline-block">
+                    Need a printable version of my CV? Download it here.
+                    <a href="#" class="cv-pdf" target="_blank">
+                        <i class="fa fa-file-arrow-down" aria-hidden="true"></i>
+                        <span class="sr-only">Download link.</span>
+                    </a>
+                </p>
             </div>
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Social</h5>
+                <ul class="list-inline social-links">
+                    <li class="list-inline-item">
+                        <a target="_blank" href="#">
+                            <i class="fa fa-linkedin" aria-hidden="true">
+                                <span class="sr-only">LinkedIn</span>
+                            </i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a target="_blank" href="#">
+                            <i class="fa-brands fa-square-github" aria-hidden="true">
+                                <span class="sr-only">Github</span>
+                            </i>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
 
