Style personal info section

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         </h3>
                     </div>
                 </div>
-                <div class="personal-info item">
+                <div class="personal-info-item">
                     <div class="key">
                         <p class="uppercase">
                             Name:
