--- a/resume.html
+++ b/resume.html
@@ -63,7 +63,7 @@
                         <h3 class="section-heading uppercase">My skills</h3>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row progress-section">
                     <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
                         <div class="row">
                             <div class="col-2">
@@ -72,8 +72,7 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Front End</h4>
                                 <p>
-                                    I'm a newly educated Full Stack Developer with a curious mind
-                                    and fondness for problem solving.
+                                    Text coming soon... 
                                 </p>
                             </div>
                         </div>
@@ -86,11 +85,59 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Back End</h4>
                                 <p>
-                                    I follow form as well as function. I know that the aesthetics of effective
-                                    design combined with application speed, security and reliability combine to
-                                    create a great user experience.
+                                    Text coming soon..
                                 </p>
                             </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%;">
+                                <span class="sr-only">90% complete</span>
+                            </div>
+                            <span class="progress-type">HTML / HTML5</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="progress">
+                            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
+                                <span class="sr-only">80% complete</span>
+                            </div>
+                            <span class="progress-type">CSS / CSS3</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="progress">
+                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%;">
+                                <span class="sr-only">70% complete</span>
+                            </div>
+                            <span class="progress-type">JavaScript / jQuery</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="progress">
+                            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%;">
+                                <span class="sr-only">70% complete</span>
+                            </div>
+                            <span class="progress-type">Django / Python</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="progress">
+                            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%;">
+                                <span class="sr-only">50% complete</span>
+                            </div>
+                            <span class="progress-type">SQL / NoSQL</span>
                         </div>
                     </div>
                 </div>
