--- a/resume.html
+++ b/resume.html
@@ -48,12 +48,30 @@
     </header>
     <section class="container-fluid">
         <div class="row">
-            <div class="col-md-4 bg-color-personal-info section-column">
+            <div class="col-md-4 bg-color-work-history section-column">
                 <div class="row">
                     <div class="col-12">
-                        <h3 class="section-heading uppercase">
+                        <h3 class="history-heading uppercase">
                             Work history
                         </h3>
+                    </div>
+                </div>
+                <div class="history-item">
+                    <div class="timeline-item" data-dates="04/2017 - 12/2017">
+                        <h4>Gestamp HardTech</h4>
+                        <p>Production Leader</p>
+                    </div>
+                    <div class="timeline-item" data-dates="12/2017 - 11/2018">
+                        <h4>Gestamp HardTech</h4>
+                        <p>Process Operative</p>
+                    </div>
+                    <div class="timeline-item" data-dates="11/2018 - 05/2021">
+                        <h4>Baxter Inc</h4>
+                        <p>Warehouse Group Leader</p>
+                    </div>
+                    <div class="timeline-item" data-dates="05/2021 - 12/2022">
+                        <h4>Baxter Inc</h4>
+                        <p>Warehouse Operative</p>
                     </div>
                 </div>
             </div>
