--- a/contact.html
+++ b/contact.html
@@ -30,16 +30,17 @@
                     <div class="col">
                         <ul id="nav" class="list-inline menucontainer">
                             <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
+                                <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
+                                <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-address-book" aria-hidden="true"></i><span>Contact</span></a>
+                                <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-address-book" aria-hidden="true"></i><span>Contact</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-file-arrow-down" aria-hidden="true"></i><span>Download</span></a>
+                                <a href="/assets/cv/theres.cv.jpeg" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-file-arrow-down" 
+                                    aria-hidden="true"></i><span>Download</span><span id="swe">(Swedish Version)</span></a>
                             </li>
                         </ul>
                     </div>
@@ -89,15 +90,15 @@
                 <h5 class="uppercase general-sub">Social</h5>
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
-                        <a target="_blank" href="#">
+                        <a target="_blank" href="https://www.linkedin.com/in/thereslundqvist/">
                             <i class="fa fa-linkedin" aria-hidden="true">
                                 <span class="sr-only">LinkedIn</span>
                             </i>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa-brands fa-square-github" aria-hidden="true">
+                        <a target="_blank" href="https://github.com/TheresLundqvist">
+                            <i class="fa-brands fa-github" aria-hidden="true">
                                 <span class="sr-only">Github</span>
                             </i>
                         </a>
