--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div class="col">
                         <ul id="nav" class="list-inline menucontainer">
                             <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-home"
+                                <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home"
                                         aria-hidden="true"></i><span>Home</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem">
@@ -43,8 +43,8 @@
                                         aria-hidden="true"></i><span>Contact</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-file-arrow-down"
-                                        aria-hidden="true"></i><span>Download</span></a>
+                                <a href="/assets/cv/theres.cv.jpeg" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-file-arrow-down"
+                                        aria-hidden="true"></i><span>Download</span><span id="swe">(Swedish version)</span></a>
                             </li>
                         </ul>
                     </div>
@@ -160,7 +160,7 @@
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">
                     Need a printable version of my CV? Download it here.
-                    <a href="#" class="cv-pdf" target="_blank">
+                    <a href="/assets/cv/theres.cv.jpeg" class="cv-pdf" target="_blank">
                         <i class="fa fa-file-arrow-down" aria-hidden="true"></i>
                         <span class="sr-only">Download link.</span>
                     </a>
@@ -170,15 +170,15 @@
                 <h5 class="uppercase general-sub">Social</h5>
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
-                        <a target="_blank" href="#">
+                        <a target="_blank" href="https://www.linkedin.com/in/thereslundqvist/">
                             <i class="fa fa-linkedin" aria-hidden="true">
                                 <span class="sr-only">LinkedIn</span>
                             </i>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                            <i class="fa-brands fa-square-github" aria-hidden="true">
+                        <a target="_blank" href="https://github.com/TheresLundqvist">
+                            <i class="fa-brands fa-github" aria-hidden="true">
                                 <span class="sr-only">Github</span>
                             </i>
                         </a>
